add a list of elements

--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -1,2 +1,13 @@
+<h1>my first webpage</h1>
+<h2>made by Aya</h2>
+
 <p>this is my first web page!</p>
 <p>this is so nice. :)</p>
+
+<p>i will learn some coding here:</p>
+<ul>
+  <li>HTML</li>
+  <li>Javascript</li>
+  <li>CSS</li>
+  <li>more and more</li>
+</ul>
