add a photo and a website

--- a/favorite-things.html
+++ b/favorite-things.html
@@ -3,12 +3,15 @@
 
   <head>
     <title>
-      Aya's Favorite Things
+      Aya's Favorite Things.
+
     </title>
+
   </head>
 
 
   <body>
+    <img src="qq.JPG" alt="a photo of a beatiful flower">
     <h1>MY favorite things</h1>
     <h2>Here are a few of my favorite things</h2>
     <h3>People:</h3>
@@ -34,5 +37,7 @@
         </ol>
 
     <p>Thanks for reading about me! :)</p>
+    <p> to know more about me visit my blog
+      <a href="https://www.Ayaatalk.wordpress.com"> AyaTAlk</a>.</p>
   </body>
 </html>
