add some inline tags like 'em' and 'strong'

--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -1,13 +1,24 @@
-<h1>my first webpage</h1>
-<h2>made by Aya</h2>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>
+      Web Page #1
+    </title>
 
-<p>this is my first web page!</p>
-<p>this is so nice. :)</p>
+  </head>
+  <body>
+    <h1>My first webpage</h1>
+    <h2>Made by <em>Aya</em></h2>
 
-<p>i will learn some coding here:</p>
-<ul>
-  <li>HTML</li>
-  <li>Javascript</li>
-  <li>CSS</li>
-  <li>more and more</li>
-</ul>
+    <p>this is my <strong>first</strong> web page!</p>
+
+    <p>I will learn some coding here:</p>
+    <ul>
+      <li>HTML</li>
+      <li>Javascript</li>
+      <li>CSS</li>
+      <li>more and more</li>
+    </ul>
+  </body>
+
+</html>
