changing the photo path

--- a/favorite-things.html
+++ b/favorite-things.html
@@ -9,9 +9,8 @@
 
   </head>
 
-
   <body>
-    <img src="qq.JPG" alt="a photo of a beatiful flower">
+    <img src="images/qq.JPG" alt="a photo of a beatiful flower">
     <h1>MY favorite things</h1>
     <h2>Here are a few of my favorite things</h2>
     <h3>People:</h3>
