connect my first web page with my favorite things' page

--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -19,6 +19,8 @@
       <li>CSS</li>
       <li>more and more</li>
     </ul>
+
+    <p>here are some more information about my <a href="favorite-things.html"> <strong>favorite things</strong></a>.</p>
   </body>
 
 </html>
