some final changes

--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -20,7 +20,9 @@
       <li>more and more</li>
     </ul>
 
-    <p>here are some more information about my <a href="favorite-things.html"> <strong>favorite things</strong></a>.</p>
+    <p>here are some more information about my
+      <a href="favorite-things.html"> <strong>favorite things</strong></a>.
+    </p>
   </body>
 
 </html>
