add the practice changes to the webpage

--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link href="css/b-styles.css" rel="stylesheet" type="text/css">
     <title>
       Web Page #1
     </title>
@@ -10,17 +11,17 @@
     <h1>My first webpage</h1>
     <h2>Made by <em>Aya</em></h2>
 
-    <p>this is my <strong>first</strong> web page!</p>
+    <p>This is my <strong>first</strong> web page!</p>
 
     <p>I will learn some coding here:</p>
     <ul>
       <li>HTML</li>
       <li>Javascript</li>
       <li>CSS</li>
-      <li>more and more</li>
+      <li>And more..</li>
     </ul>
 
-    <p>here are some more information about my
+    <p>Here are some more information about my
       <a href="favorite-things.html"> <strong>favorite things</strong></a>.
     </p>
   </body>
